--- a/.github/actions/build_extensions/action.yml
+++ b/.github/actions/build_extensions/action.yml
@@ -176,7 +176,7 @@ runs:
       if: ${{ inputs.run_tests == '1' && inputs.no_static_linking == '0' }}
       shell: bash
       run: |
-        ${{ inputs.unittest_script }} '--autoloading none'
+        ${{ inputs.unittest_script }} --autoloading none
 
     - name: Run post-install scripts
       if: ${{ inputs.post_install != '' }}
@@ -214,7 +214,7 @@ runs:
         cd  ${{ inputs.build_dir}}
         python3 scripts/get_test_list.py --file-contains 'require ' --list '"*.test"' > test.list
         python3 scripts/get_test_list.py --file-contains 'require-env LOCAL_EXTENSION_REPO' --list '"*.test"' >> test.list
-        ${{ inputs.unittest_script }} '-f test.list --autoloading available'
+        ${{ inputs.unittest_script }} '-f test.list' --autoloading available
         rm -rf build/release/extension
         mv build/extension_tmp build/release/extension
 
