--- a/.github/workflows/OSX.yml
+++ b/.github/workflows/OSX.yml
@@ -288,7 +288,7 @@ jobs:
         run: |
           python3 scripts/get_test_list.py --file-contains 'require ' --list '"*.test"' > test.list
           python3 scripts/get_test_list.py --file-contains 'require-env LOCAL_EXTENSION_REPO' --list '"*.test"' >> test.list
-          python3 scripts/run_tests_one_by_one.py ./build/release/test/unittest '-f test.list' --autoloading available
+          ./build/release/test/unittest -f test.list --autoloading available
 
   upload-osx-extensions:
     name: Upload OSX Extensions
