--- a/.github/workflows/Regression.yml
+++ b/.github/workflows/Regression.yml
@@ -16,6 +16,7 @@ on:
       - 'v*.*-*'
     paths-ignore:
       - '**.md'
+      - 'test/configs/**'
       - 'tools/**'
       - '!tools/pythonpkg/**'
       - '.github/patches/duckdb-wasm/**'
@@ -26,6 +27,7 @@ on:
     types: [opened, reopened, ready_for_review]
     paths-ignore:
       - '**.md'
+      - 'test/configs/**'
       - 'tools/**'
       - '!tools/pythonpkg/**'
       - '.github/patches/duckdb-wasm/**'
