backport pr18087 - Configure skip error messages

--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -402,6 +402,12 @@ jobs:
       run: |
         ./build/release/test/unittest --test-config test/configs/prefetch_all_parquet_files.json
 
+    - name: test/configs/no_local_filesystem.json
+      if: (success() || failure()) && steps.build.conclusion == 'success'
+      shell: bash
+      run: |
+        ./build/release/test/unittest --test-config test/configs/no_local_filesystem.json
+
     - name: Test dictionary_expression
       if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
