OSX.yml: Skip compiled tests, due to test_remote_optimizer.cpp in particular being flaky

--- a/.github/workflows/OSX.yml
+++ b/.github/workflows/OSX.yml
@@ -280,7 +280,7 @@ jobs:
         env:
           LOCAL_EXTENSION_REPO: ${{ github.workspace }}
         run: |
-          ./build/release/test/unittest --autoloading available
+          ./build/release/test/unittest --autoloading available --skip-compiled
 
   upload-osx-extensions:
     name: Upload OSX Extensions
