feat: switch to using extension-ci-tools for extension builds

--- a/.github/actions/build_extensions/action.yml
+++ b/.github/actions/build_extensions/action.yml
@@ -1,3 +1,9 @@
+# # # # # # # # # # # # # # # # # #
+#
+# WARNING: DEPRECATED!
+#
+# # # # # # # # # # # # # # # # # #
+
 name: "Build Extensions"
 description: "Build, test and deploy the DuckDB extensions"
 inputs:
