move block_alloc_size  tests to Main.yml

--- a/.github/workflows/NightlyTests.yml
+++ b/.github/workflows/NightlyTests.yml
@@ -571,7 +571,7 @@ jobs:
        run: |
          python scripts/regression/test_runner.py --old unsafe/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/imdb.csv --verbose --threads 2
 
-  block-sizes:
+  vector-sizes:
     name: Block Sizes
     runs-on: ubuntu-24.04
     needs: linux-memory-leaks
@@ -594,25 +594,17 @@ jobs:
           key: ${{ github.job }}
           save: ${{ env.CCACHE_SAVE }}
 
-      - name: Build with standard vector size
-        shell: bash
-        run: BLOCK_ALLOC_SIZE=16384 make relassert
-
-      - name: Fast and storage tests
-        shell: bash
-        run: |
-          python3 scripts/run_tests_one_by_one.py ./build/relassert/test/unittest --no-exit --time_execution
-          python3 scripts/run_tests_one_by_one.py ./build/relassert/test/unittest "test/sql/storage/*" --no-exit --time_execution
-
       - name: Build with vector size of 512
         shell: bash
-        run: rm -rf ./build && rm -rf ./duckdb_unittest_tempdir && make clean && BLOCK_ALLOC_SIZE=16384 STANDARD_VECTOR_SIZE=512 make relassert
+        run: STANDARD_VECTOR_SIZE=512 make relassert
 
-      - name: Fast and storage tests
+      - name: Fast and storage tests with default and small block size
         shell: bash
         run: |
-          python3 scripts/run_tests_one_by_one.py ./build/relassert/test/unittest --no-exit --time_execution
-          python3 scripts/run_tests_one_by_one.py ./build/relassert/test/unittest "test/sql/storage/*" --no-exit --time_execution
+          ./build/relassert/test/unittest
+          ./build/relassert/test/unittest "test/sql/storage/*"
+          ./build/relassert/test/unittest --test-config test/configs/small_block_size.json
+          ./build/relassert/test/unittest "test/sql/storage/*" --test-config test/configs/small_block_size.json
 
   linux-wasm-experimental:
     name: WebAssembly duckdb-wasm builds
