--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -408,6 +408,12 @@ jobs:
       run: |
         ./build/release/test/unittest --test-config test/configs/no_local_filesystem.json
 
+    - name: test/configs/small_block_size.json
+      if: (success() || failure()) && steps.build.conclusion == 'success'
+      shell: bash
+      run: |
+        ./build/release/test/unittest --test-config test/configs/small_block_size.json
+
     - name: Test dictionary_expression
       if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
