--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -390,6 +390,9 @@ jobs:
     runs-on: ubuntu-22.04
     needs: linux-extensions-64
     if: ${{ inputs.skip_tests != 'true' }}
+    env:
+      GEN: ninja
+
     steps:
     - uses: actions/checkout@v3
       with:
