--- a/extension/autocomplete/CMakeLists.txt
+++ b/extension/autocomplete/CMakeLists.txt
@@ -5,7 +5,7 @@ project(AutoCompleteExtension)
 include_directories(include)
 
 set(AUTOCOMPLETE_EXTENSION_FILES
-    autocomplete_extension.cpp matcher.cpp tokenizer.cpp peg_keyword_helper.cpp
+    autocomplete_extension.cpp matcher.cpp tokenizer.cpp
     keyword_map.cpp)
 
 build_static_extension(autocomplete ${AUTOCOMPLETE_EXTENSION_FILES})
