--- a/extension/autocomplete/CMakeLists.txt
+++ b/extension/autocomplete/CMakeLists.txt
@@ -4,9 +4,8 @@ project(AutoCompleteExtension)
 
 include_directories(include)
 
-set(AUTOCOMPLETE_EXTENSION_FILES
-    autocomplete_extension.cpp matcher.cpp tokenizer.cpp
-    keyword_map.cpp)
+set(AUTOCOMPLETE_EXTENSION_FILES autocomplete_extension.cpp matcher.cpp
+                                 tokenizer.cpp keyword_map.cpp)
 
 build_static_extension(autocomplete ${AUTOCOMPLETE_EXTENSION_FILES})
 set(PARAMETERS "-warnings")
