--- a/.github/workflows/Extensions.yml
+++ b/.github/workflows/Extensions.yml
@@ -77,8 +77,8 @@ jobs:
       rust_based_extensions_config: ${{ steps.set-rust-based-extensions.outputs.extension_config }}
       rust_based_extensions_exclude_archs: ${{ steps.set-rust-based-extensions.outputs.exclude_archs }}
     env:
-      # NOTE: on PRs we exclude some archs to speed things up TODO: improve further on this # TODO2: remove defaults
-      BASE_EXCLUDE_ARCHS: ${{ github.event_name == 'pull_request' && 'wasm_eh;wasm_wasm_threads;windows_amd64_mingw;osx_amd64;linux_arm64;linux_amd64_musl;' || 'wasm_eh;wasm_wasm_threads;windows_amd64_mingw;osx_amd64;linux_arm64;linux_amd64_musl;wasm_mvp;linux_arm64' }}
+      # NOTE: on PRs we exclude some archs to speed things up TODO: improve further on this
+      BASE_EXCLUDE_ARCHS: ${{ github.event_name == 'pull_request' && 'wasm_eh;wasm_wasm_threads;windows_amd64_mingw;osx_amd64;linux_arm64;linux_amd64_musl;' || '' }}
       EXTRA_EXCLUDE_ARCHS: ${{ inputs.extra_exclude_archs }}
     steps:
       - uses: actions/checkout@v4
@@ -244,7 +244,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{secrets.S3_ID}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.S3_KEY}}
-#          DUCKDB_DEPLOY_SCRIPT_MODE: for_real TODO: restore
+          DUCKDB_DEPLOY_SCRIPT_MODE: for_real
           DUCKDB_EXTENSION_SIGNING_PK: ${{ secrets.DUCKDB_EXTENSION_SIGNING_PK }}
           AWS_DEFAULT_REGION: us-east-1
         run: |
@@ -354,7 +354,6 @@ jobs:
           find build/release/repository -type f ! -path "build/release/repository/*/linux_amd64/*" -delete
           tree build/release/repository
 
-      # TODO: add rust-based extensions here too
       - name: Check if extension_entries.hpp is up to date
         shell: bash
         env:
