--- a/.github/workflows/_extension_distribution.yml
+++ b/.github/workflows/_extension_distribution.yml
@@ -43,7 +43,7 @@ jobs:
       extension_name: ${{ inputs.artifact_prefix }}
 
       # DuckDB version is overridden to the current commit of the current repository
-      set_caller_as_duckdb: true;
+      set_caller_as_duckdb: true
       duckdb_version: ${{ github.sha }}
 #      override_duckdb_repository: https://github.com/${{ github.repository }}.git
 
