--- a/.github/workflows/Extensions.yml
+++ b/.github/workflows/Extensions.yml
@@ -75,7 +75,7 @@ jobs:
       rust_based_extensions_config: ${{ steps.set-rust-based-extensions.outputs.extension_config }}
       rust_based_extensions_exclude_archs: ${{ steps.set-rust-based-extensions.outputs.exclude_archs }}
     env:
-      # NOTE: on PRs we exclude some archs to speed things up TODO: improve further on this
+      # NOTE: on PRs we exclude some archs to speed things up TODO: improve further on this?
       BASE_EXCLUDE_ARCHS: ${{ github.event_name == 'pull_request' && 'wasm_eh;wasm_threads;windows_amd64_mingw;osx_amd64;linux_arm64;linux_amd64_musl;' || '' }}
       EXTRA_EXCLUDE_ARCHS: ${{ inputs.extra_exclude_archs }}
     steps:
