Rework SET/RESET test to use SQL statements instead of option internals

--- a/src/common/settings.json
+++ b/src/common/settings.json
@@ -258,7 +258,7 @@
         "name": "default_null_order",
         "description": "NULL ordering used when none is specified (NULLS_FIRST or NULLS_LAST)",
         "type": "ENUM<DefaultOrderByNullType>",
-        "default_value": "NULLS LAST",
+        "default_value": "NULLS_LAST",
         "default_scope": "global",
         "custom_implementation": [
             "set"
