Handle aliases separately

--- a/src/common/settings.json
+++ b/src/common/settings.json
@@ -262,6 +262,9 @@
         "default_scope": "global",
         "custom_implementation": [
             "set"
+        ],
+        "aliases": [
+            "null_order"
         ]
     },
     {
