--- a/src/common/settings.json
+++ b/src/common/settings.json
@@ -153,7 +153,8 @@
         "name": "catalog_error_max_schemas",
         "description": "The maximum number of schemas the system will scan for \\\"did you mean...\\\" style errors in the catalog",
         "type": "UBIGINT",
-        "scope": "global"
+        "default_scope": "global",
+        "default_value": "100"
     },
     {
         "name": "checkpoint_threshold",
@@ -251,8 +252,11 @@
         "name": "default_collation",
         "description": "The collation setting used when none is specified",
         "type": "VARCHAR",
-        "scope": "global_local",
-        "custom_implementation": true
+        "default_scope": "global",
+        "default_value": "",
+        "on_callbacks": [
+            "set"
+        ]
     },
     {
         "name": "default_null_order",
@@ -341,7 +345,8 @@
         "name": "dynamic_or_filter_threshold",
         "description": "The maximum amount of OR filters we generate dynamically from a hash join",
         "type": "UBIGINT",
-        "scope": "local"
+        "default_scope": "local",
+        "default_value": "50"
     },
     {
         "name": "enable_external_access",
@@ -395,7 +400,8 @@
         "name": "enable_macro_dependencies",
         "description": "Enable created MACROs to create dependencies on the referenced objects (such as tables)",
         "type": "BOOLEAN",
-        "scope": "global"
+        "default_scope": "global",
+        "default_value": "false"
     },
     {
         "name": "enable_object_cache",
@@ -433,7 +439,8 @@
         "name": "enable_view_dependencies",
         "description": "Enable created VIEWs to create dependencies on the referenced objects (such as tables)",
         "type": "BOOLEAN",
-        "scope": "global"
+        "default_scope": "global",
+        "default_value": "false"
     },
     {
         "name": "enabled_log_types",
@@ -549,13 +556,15 @@
         "name": "index_scan_max_count",
         "description": "The maximum index scan count sets a threshold for index scans. If fewer than MAX(index_scan_max_count, \"\n\t    \"index_scan_percentage * total_row_count) rows match, we perform an index scan instead of a table scan.",
         "type": "UBIGINT",
-        "scope": "global"
+        "default_scope": "global",
+        "default_value": 2048
     },
     {
         "name": "index_scan_percentage",
         "description": "The index scan percentage sets a threshold for index scans. If fewer than MAX(index_scan_max_count, \"\n\t    \"index_scan_percentage * total_row_count) rows match, we perform an index scan instead of a table scan.",
         "type": "DOUBLE",
-        "scope": "global",
+        "default_scope": "global",
+        "default_value": "0.001",
         "on_callbacks": [
             "set"
         ]
@@ -661,7 +670,8 @@
         "name": "old_implicit_casting",
         "description": "Allow implicit casting to/from VARCHAR",
         "type": "BOOLEAN",
-        "scope": "global"
+        "default_scope": "global",
+        "default_value": "false"
     },
     {
         "name": "order_by_non_integer_literal",
@@ -741,7 +751,8 @@
         "name": "preserve_insertion_order",
         "description": "Whether or not to preserve insertion order. If set to false the system is allowed to re-order any results \"\n\t    \"that do not contain ORDER BY clauses.",
         "type": "BOOLEAN",
-        "scope": "global"
+        "default_scope": "global",
+        "default_value": "true"
     },
     {
         "name": "produce_arrow_string_view",
