--- a/src/common/settings.json
+++ b/src/common/settings.json
@@ -46,7 +46,8 @@
         "name": "allow_extensions_metadata_mismatch",
         "description": "Allow to load extensions with not compatible metadata",
         "type": "BOOLEAN",
-        "scope": "global"
+        "default_scope": "global",
+        "default_value": "false"
     },
     {
         "name": "allow_persistent_secrets",
