--- a/src/function/table/system/CMakeLists.txt
+++ b/src/function/table/system/CMakeLists.txt
@@ -26,6 +26,7 @@ add_library_unity(
   duckdb_types.cpp
   duckdb_variables.cpp
   duckdb_views.cpp
+  enable_logging.cpp
   pragma_collations.cpp
   pragma_database_size.cpp
   pragma_metadata_info.cpp
