add enable verification config

--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -112,11 +112,10 @@ jobs:
     - name: Test
       shell: bash
       run: make allunit
-
  no-string-inline:
     name: No String Inline / Destroy Unpinned Blocks
     runs-on: ubuntu-24.04
-    needs: linux-configs
+    needs: linux-release-configs
     env:
       GEN: ninja
       CORE_EXTENSIONS: "icu;parquet;tpch;tpcds;fts;json;inet"
@@ -149,11 +148,10 @@ jobs:
       - name: Test
         shell: bash
         run: build/relassert/test/unittest
-
  vector-sizes:
     name: Vector Sizes
     runs-on: ubuntu-22.04
-    needs: linux-configs
+    needs: linux-release-configs
     env:
       CC: gcc-10
       CXX: g++-10
@@ -197,7 +195,7 @@ jobs:
     name: Valgrind
     if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-24.04
-    needs: linux-configs
+    needs: linux-release-configs
     env:
       CC: clang
       CXX: clang++
@@ -230,10 +228,9 @@ jobs:
     - name: Test
       shell: bash
       run: valgrind ./build/relassert/test/unittest test/sql/tpch/tpch_sf001.test_slow
-
  threadsan:
     name: Thread Sanitizer
-    needs: linux-configs
+    needs: linux-release-configs
     runs-on: ubuntu-24.04
     env:
       CC: clang
@@ -276,7 +273,7 @@ jobs:
 
  linux-httpfs:
     name: Linux HTTPFS
-    needs: linux-configs
+    needs: linux-release-configs
     runs-on: ubuntu-22.04
     env:
       CORE_EXTENSIONS: "json;parquet;tpch;tpcds;httpfs"
@@ -334,11 +331,13 @@ jobs:
         sleep 60
 
         python3 scripts/get_test_list.py --file-contains 'require httpfs' --list '"*"' > test.list
-        python3 scripts/run_tests_one_by_one.py ./build/release/test/unittest '-f test.list'
+        python3 scripts/run_tests_one_by_one.py ./build/release/test/unittest '-f test.list'n
         python3 scripts/run_tests_one_by_one.py ./build/release/test/unittest '[secret]'
 
- linux-configs:
-    name: Tests with different configurations
+ # TODO: Bring back BLOCK_VERIFICATION: 1, and consider bringing back fts
+ # TODO: DEBUG_STACKTRACE: 1 + reldebug ?
+ linux-release-configs:
+    name: Tests a release build with different configurations
     runs-on: ubuntu-24.04
     env:
       BASE_BRANCH: ${{ github.base_ref || 'main' }}
@@ -365,8 +364,6 @@ jobs:
     - name: Build
       id: build
       shell: bash
-      # Bring back BLOCK_VERIFICATION: 1, and consider bringing back fts
-      # DEBUG_STACKTRACE: 1 + reldebug ?
       env:
         CORE_EXTENSIONS: "json;parquet;icu;tpch;tpcds"
         GEN: ninja
@@ -378,23 +375,11 @@ jobs:
       run: |
         ./build/release/test/unittest --test-config test/configs/encryption.json
 
-    - name: test/configs/force_storage.json
-      if: (success() || failure()) && steps.build.conclusion == 'success'
-      shell: bash
-      run: |
-        ./build/release/test/unittest --test-config test/configs/force_storage.json
-
     - name: test/configs/force_storage_restart.json
       if: (success() || failure()) && steps.build.conclusion == 'success'
       shell: bash
       run: |
         ./build/release/test/unittest --test-config test/configs/force_storage_restart.json
-
-    - name: test/configs/latest_storage.json
-      if: (success() || failure()) && steps.build.conclusion == 'success'
-      shell: bash
-      run: |
-        ./build/release/test/unittest --test-config test/configs/latest_storage.json
 
     - name: test/configs/prefetch_all_parquet_files.json
       if: (success() || failure()) && steps.build.conclusion == 'success'
@@ -419,6 +404,12 @@ jobs:
       shell: bash
       run: |
         ./build/release/test/unittest --test-config test/configs/latest_storage_block_size_16kB.json
+
+    - name: test/configs/verify_fetch_row.json
+      if: (success() || failure()) && steps.build.conclusion == 'success'
+      shell: bash
+      run: |
+        ./build/release/test/unittest --test-config test/configs/verify_fetch_row.json
 
     - name: Test dictionary_expression
       if: (success() || failure()) && steps.build.conclusion == 'success'
@@ -449,3 +440,54 @@ jobs:
       shell: bash
       run: |
         ./build/release/test/unittest --verify-vector nested_shuffle --skip-compiled
+
+ linux-relassert-configs:
+   name: Tests relassert with different configurations
+   runs-on: ubuntu-24.04
+   env:
+     BASE_BRANCH: ${{ github.base_ref || 'main' }}
+
+   steps:
+     - uses: actions/checkout@v3
+       with:
+         fetch-depth: 0
+
+     - uses: actions/setup-python@v5
+       with:
+         python-version: '3.12'
+
+     - name: Install Ninja
+       shell: bash
+       run: sudo apt-get update -y -qq && sudo apt-get install -y -qq ninja-build
+
+     - name: Setup Ccache
+       uses: hendrikmuhs/ccache-action@main
+       with:
+         key: ${{ github.job }}
+         save: ${{ github.ref == 'refs/heads/main' || github.repository != 'duckdb/duckdb' }}
+
+     - name: Build
+       id: build
+       shell: bash
+       env:
+         CORE_EXTENSIONS: "json;parquet;icu;tpch;tpcds"
+         GEN: ninja
+       run: make relassert
+
+     - name: test/configs/force_storage.json
+       if: (success() || failure()) && steps.build.conclusion == 'success'
+       shell: bash
+       run: |
+         ./build/relassert/test/unittest --test-config test/configs/force_storage.json
+
+     - name: test/configs/latest_storage.json
+       if: (success() || failure()) && steps.build.conclusion == 'success'
+       shell: bash
+       run: |
+         ./build/relassert/test/unittest --test-config test/configs/latest_storage.json
+
+     - name: test/configs/enable_verification.json
+       if: (success() || failure()) && steps.build.conclusion == 'success'
+       shell: bash
+       run: |
+         ./build/relassert/test/unittest --test-config test/configs/enable_verification.json
